<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationCompteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_creerCompte"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_nom"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/vert">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_postnom"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/vert">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postnomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/text_prenom"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/vert">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prenomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_email"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/vert">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/text_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/vert"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/creercomptesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/vert"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/text_creerCompte"
                app:cornerRadius="10dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dejacompte"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/connexionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_connect"
                android:textColor="@color/blue"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>





</ScrollView>