<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="352dp"
        android:layout_height="196dp"
        android:layout_marginEnd="102dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choix"
        android:layout_marginStart="32dp"
        android:layout_marginTop="170dp"
        android:textSize="27sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViedw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tant"
        android:layout_marginStart="132dp"
        android:layout_marginTop="190dp"
        android:textSize="27sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:paddingEnd="20dp"
            android:elevation="7dp"
            android:layout_marginTop="250dp"
            android:paddingBottom="20dp"
            android:text="@string/text_prof"
            app:cornerRadius="10dp" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ProgressBar
            android:id="@+id/signInProgresBar"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/etudiantsBtn"
            android:layout_width="match_parent"
            android:elevation="7dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/vert"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="340dp"
            android:paddingBottom="20dp"
            android:text="@string/text_etudiants"
            app:cornerRadius="10dp" />

    </FrameLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="630dp"
        android:src="@drawable/logo" />





</RelativeLayout>