<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableauDeBordProfesseurActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="79dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="80dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/logo"
                        tools:ignore="DuplicateIds" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/dash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:layout_weight="1"
                            android:text="@string/text_title"

                            android:textAlignment="viewEnd"
                            android:textColor="@color/vert"
                            android:textSize="25sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10dp"
                            android:textStyle="italic"
                            android:textColor="@color/gris"
                            android:text="@string/text_gestion"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="300dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/gris"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/banner_top_background"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_marginTop="300dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_annee"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="DuplicateIds" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_annee_ac"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/rouge"
                            android:textStyle="bold"
                            tools:ignore="DuplicateIds" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/gris_clair"
                        tools:ignore="DuplicateIds" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/profImage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/nav_person"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/profText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/text_assistant"
                                android:textAlignment="center"
                                android:textColor="@color/gris_clair"
                                android:textStyle="bold"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/courImage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@drawable/nav_cour"
                                tools:ignore="DuplicateIds" />

                            <TextView
                                android:id="@+id/courText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/text_cour"
                                android:textAlignment="center"
                                android:textColor="@color/gris_clair"
                                android:textStyle="bold"
                                tools:ignore="DuplicateIds" />
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/etudiantBtn"
                        style="@android:style/Widget.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.5"
                        android:drawableStart="@drawable/nav_person"
                        android:drawablePadding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/text_etudiant"
                        android:textAlignment="viewStart"
                        android:textColor="@color/vert"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateIds" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/profilBtn"
                        style="@android:style/Widget.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="0.5"
                        android:drawableStart="@drawable/nav_profil"
                        android:drawablePadding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/text_profil"
                        android:textAlignment="viewStart"
                        android:textColor="@color/vert"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/aproposBtn"
                        style="@android:style/Widget.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.5"
                        android:drawableStart="@drawable/nav_info"
                        android:drawablePadding="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/text_apropos"
                        android:textAlignment="viewStart"
                        android:textColor="@color/vert"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateIds" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/deconnexionButton"
                        style="@android:style/Widget.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="0.5"
                        android:drawableStart="@drawable/nav_exit"
                        android:drawablePadding="8dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="16dp"
                        android:text="@string/text_deconnexion"
                        android:textAlignment="viewStart"
                        android:textColor="@color/vert"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>